Java client lib major refactoring and cleanup (unfinished)