@@ -24,27 +24,42 @@ package com.radixdlt.client.application.translate.tokens;
 
 import com.radixdlt.client.application.identity.RadixIdentity;
 import com.radixdlt.client.application.translate.AtomToExecutedActionsMapper;
-import com.radixdlt.identifiers.RadixAddress;
 import com.radixdlt.client.atommodel.tokens.TransferrableTokensParticle;
 import com.radixdlt.client.core.atoms.Atom;
-import com.radixdlt.identifiers.RRI;
+import com.radixdlt.client.core.atoms.ParticleGroup;
 import com.radixdlt.client.core.atoms.particles.Spin;
 import com.radixdlt.client.core.atoms.particles.SpunParticle;
+import com.radixdlt.identifiers.RRI;
+import com.radixdlt.identifiers.RadixAddress;
 import com.radixdlt.utils.Bytes;
-import io.reactivex.Observable;
-
+import com.radixdlt.utils.Pair;
 
 import java.math.BigDecimal;
-import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
+import java.util.Optional;
+import java.util.stream.Collector;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import io.reactivex.Observable;
+
+import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.reducing;
 
 /**
  * Maps an atom to some number of token transfer actions.
  */
 public class AtomToTokenTransfersMapper implements AtomToExecutedActionsMapper<TokenTransfer> {
+	private static final Collector<SpunParticle, ?, Map<RRI, Map<RadixAddress, BigDecimal>>> GROUPING_COLLECTOR =
+		groupingBy(
+			sp -> sp.getParticle(TransferrableTokensParticle.class).getTokenDefinitionReference(),
+			groupingBy(
+				sp -> sp.getParticle(TransferrableTokensParticle.class).getAddress(),
+				reducing(BigDecimal.ZERO, AtomToTokenTransfersMapper::consumableToAmount, BigDecimal::add)
+			)
+		);
 
 	public AtomToTokenTransfersMapper() {
 		// Nothing to do here
@@ -56,64 +71,59 @@ public class AtomToTokenTransfersMapper implements AtomToExecutedActionsMapper<T
 	}
 
 
-	private BigDecimal consumableToAmount(SpunParticle sp) {
-		BigDecimal amount = TokenUnitConversions.subunitsToUnits(sp.getParticle(TransferrableTokensParticle.class).getAmount());
-		return sp.getSpin() == Spin.DOWN ? amount.negate() : amount;
-	}
-
 	@Override
 	public Observable<TokenTransfer> map(Atom atom, RadixIdentity identity) {
-		List<TokenTransfer> tokenTransfers = atom.particleGroups()
-			.flatMap(pg -> {
-				Map<RRI, Map<RadixAddress, BigDecimal>> tokenSummary = pg.spunParticles()
-					.filter(sp -> sp.getParticle() instanceof TransferrableTokensParticle)
-					.collect(
-						Collectors.groupingBy(
-							sp -> sp.getParticle(TransferrableTokensParticle.class).getTokenDefinitionReference(),
-							Collectors.groupingBy(
-								sp -> sp.getParticle(TransferrableTokensParticle.class).getAddress(),
-								Collectors.reducing(BigDecimal.ZERO, this::consumableToAmount, BigDecimal::add)
-							)
-						)
-					);
+		return Observable.fromIterable(atom.particleGroups()
+										   .flatMap(this::mapTransfers)
+										   .collect(Collectors.toList()));
+	}
 
-				return tokenSummary.entrySet().stream()
-					.map(e -> {
+	private Stream<? extends TokenTransfer> mapTransfers(ParticleGroup pg) {
+		var tokenSummary = pg.spunParticles()
+			.filter(sp -> sp.getParticle() instanceof TransferrableTokensParticle)
+			.collect(GROUPING_COLLECTOR);
 
-						List<Entry<RadixAddress, BigDecimal>> summary = new ArrayList<>(e.getValue().entrySet());
-						if (summary.size() > 2) {
-							throw new IllegalStateException(
-								"More than two participants in token transfer. " + "Unable to handle: " + summary
-							);
-						}
+		return tokenSummary.entrySet().stream().map(e -> toTokenTransfer(pg, e));
+	}
 
-						final RadixAddress from;
-						final RadixAddress to;
-						if (summary.size() == 1) {
-							from = summary.get(0).getValue().signum() <= 0 ? summary.get(0).getKey() : null;
-							to = summary.get(0).getValue().signum() < 0 ? null : summary.get(0).getKey();
-						} else {
-							if (summary.get(0).getValue().signum() > 0) {
-								from = summary.get(1).getKey();
-								to = summary.get(0).getKey();
-							} else {
-								from = summary.get(0).getKey();
-								to = summary.get(1).getKey();
-							}
-						}
+	private TokenTransfer toTokenTransfer(final ParticleGroup pg, final Map.Entry<RRI, Map<RadixAddress, BigDecimal>> entry) {
+		var summary = validateSummary(entry.getValue().entrySet());
+		var fromToPair = determineSourceAndDestination(summary);
 
-						String attachment = pg.getMetaData().get("attachment");
-						return new TokenTransfer(
-							from,
-							to,
-							e.getKey(),
-							summary.get(0).getValue().abs(),
-							attachment == null ? null : Bytes.fromBase64String(attachment)
-						);
-					});
-			})
-			.collect(Collectors.toList());
+		return new TokenTransfer(
+			fromToPair.getFirst(),
+			fromToPair.getSecond(),
+			entry.getKey(),
+			summary.get(0).getValue().abs(),
+			Optional.ofNullable(pg.getMetaData().get("attachment"))
+				.map(Bytes::fromBase64String).orElse(null)
+		);
+	}
 
-		return Observable.fromIterable(tokenTransfers);
+	private Pair<RadixAddress, RadixAddress> determineSourceAndDestination(final List<Map.Entry<RadixAddress, BigDecimal>> summary) {
+		if (summary.size() == 1) {
+			return Pair.of(
+				summary.get(0).getValue().signum() <= 0 ? summary.get(0).getKey() : null,
+				summary.get(0).getValue().signum() < 0 ? null : summary.get(0).getKey()
+			);
+		}
+
+		if (summary.get(0).getValue().signum() > 0) {
+			return Pair.of(summary.get(1).getKey(), summary.get(0).getKey());
+		} else {
+			return Pair.of(summary.get(0).getKey(), summary.get(1).getKey());
+		}
+	}
+
+	private List<Map.Entry<RadixAddress, BigDecimal>> validateSummary(final Collection<Map.Entry<RadixAddress, BigDecimal>> summary) {
+		if (summary.size() > 2) {
+			throw new IllegalStateException("More than two participants in token transfer. Unable to handle: " + summary);
+		}
+		return List.copyOf(summary);
+	}
+
+	private static BigDecimal consumableToAmount(SpunParticle sp) {
+		var amount = TokenUnitConversions.subunitsToUnits(sp.getParticle(TransferrableTokensParticle.class).getAmount());
+		return sp.getSpin() == Spin.DOWN ? amount.negate() : amount;
 	}
 }
