@@ -24,24 +24,18 @@ package com.radixdlt.client.application.translate.tokens;
 
 import com.google.common.collect.ImmutableMap;
 import com.radixdlt.client.application.translate.StatelessActionToParticleGroupsMapper;
-import com.radixdlt.client.application.translate.tokens.CreateTokenAction.TokenSupplyType;
 import com.radixdlt.client.atommodel.rri.RRIParticle;
-import com.radixdlt.client.atommodel.tokens.MutableSupplyTokenDefinitionParticle;
-import com.radixdlt.client.atommodel.tokens.MutableSupplyTokenDefinitionParticle.TokenTransition;
-import com.radixdlt.client.atommodel.tokens.FixedSupplyTokenDefinitionParticle;
-import com.radixdlt.client.atommodel.tokens.TokenPermission;
 import com.radixdlt.client.atommodel.tokens.TransferrableTokensParticle;
 import com.radixdlt.client.atommodel.tokens.UnallocatedTokensParticle;
 import com.radixdlt.client.core.atoms.ParticleGroup;
-import com.radixdlt.client.core.atoms.ParticleGroup.ParticleGroupBuilder;
 import com.radixdlt.client.core.atoms.particles.Spin;
 import com.radixdlt.client.core.atoms.particles.SpunParticle;
+import com.radixdlt.utils.UInt256;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import com.radixdlt.utils.UInt256;
+
+import static com.radixdlt.client.application.translate.tokens.TokenUnitConversions.unitsToSubunits;
 
 /**
  * Maps the CreateToken action into it's corresponding particles
@@ -49,71 +43,57 @@ import com.radixdlt.utils.UInt256;
 public class CreateTokenToParticleGroupsMapper implements StatelessActionToParticleGroupsMapper<CreateTokenAction> {
 	@Override
 	public List<ParticleGroup> mapToParticleGroups(CreateTokenAction tokenCreation) {
-		if (tokenCreation.getTokenSupplyType().equals(TokenSupplyType.FIXED)) {
-			return createFixedSupplyToken(tokenCreation);
-		} else if (tokenCreation.getTokenSupplyType().equals(TokenSupplyType.MUTABLE)) {
-			return createVariableSupplyToken(tokenCreation);
-		} else {
-			throw new IllegalStateException("Unknown supply type: " + tokenCreation.getTokenSupplyType());
+		switch (tokenCreation.getTokenSupplyType()) {
+			case FIXED:
+				return createFixedSupplyToken(tokenCreation);
+			case MUTABLE:
+				return createVariableSupplyToken(tokenCreation);
+			default:
+				throw new IllegalStateException("Unknown supply type: " + tokenCreation.getTokenSupplyType());
 		}
 	}
 
 	public List<ParticleGroup> createVariableSupplyToken(CreateTokenAction tokenCreation) {
-		MutableSupplyTokenDefinitionParticle token = new MutableSupplyTokenDefinitionParticle(
-			tokenCreation.getRRI().getAddress(),
-			tokenCreation.getName(),
-			tokenCreation.getRRI().getName(),
-			tokenCreation.getDescription(),
-			TokenUnitConversions.unitsToSubunits(tokenCreation.getGranularity()),
-			ImmutableMap.of(
-				TokenTransition.MINT, TokenPermission.TOKEN_OWNER_ONLY,
-				TokenTransition.BURN, TokenPermission.TOKEN_OWNER_ONLY
-			),
-			tokenCreation.getIconUrl(),
-			tokenCreation.getUrl()
-		);
+		var token = tokenCreation.toMutableSupplyTokenDefinitionParticle();
 
-		UnallocatedTokensParticle unallocated = new UnallocatedTokensParticle(
+		var unallocated = new UnallocatedTokensParticle(
 			UInt256.MAX_VALUE,
-			TokenUnitConversions.unitsToSubunits(tokenCreation.getGranularity()),
+			unitsToSubunits(tokenCreation.getGranularity()),
 			System.currentTimeMillis(),
 			token.getRRI(),
 			token.getTokenPermissions()
 		);
 
-		RRIParticle rriParticle = new RRIParticle(token.getRRI());
-		ParticleGroup tokenCreationGroup = ParticleGroup.of(
-			SpunParticle.down(rriParticle),
+		var tokenCreationGroup = ParticleGroup.of(
+			SpunParticle.down(new RRIParticle(token.getRRI())),
 			SpunParticle.up(token),
 			SpunParticle.up(unallocated)
 		);
 
 		if (tokenCreation.getInitialSupply().compareTo(BigDecimal.ZERO) == 0) {
 			// No initial supply -> just the token particle
-			return Collections.singletonList(
-				tokenCreationGroup
-			);
+			return List.of(tokenCreationGroup);
 		}
 
-		TransferrableTokensParticle minted = new TransferrableTokensParticle(
-			TokenUnitConversions.unitsToSubunits(tokenCreation.getInitialSupply()),
-			TokenUnitConversions.unitsToSubunits(tokenCreation.getGranularity()),
+		var minted = new TransferrableTokensParticle(
+			unitsToSubunits(tokenCreation.getInitialSupply()),
+			unitsToSubunits(tokenCreation.getGranularity()),
 			tokenCreation.getRRI().getAddress(),
 			System.nanoTime(),
 			token.getRRI(),
 			token.getTokenPermissions()
 		);
 
-		ParticleGroupBuilder mintGroupBuilder = ParticleGroup.builder()
+		var mintGroupBuilder = ParticleGroup.builder()
 			.addParticle(unallocated, Spin.DOWN)
 			.addParticle(minted, Spin.UP);
 
-		final UInt256 leftOver = UInt256.MAX_VALUE.subtract(TokenUnitConversions.unitsToSubunits(tokenCreation.getInitialSupply()));
+		final var leftOver = UInt256.MAX_VALUE.subtract(unitsToSubunits(tokenCreation.getInitialSupply()));
 
 		if (!leftOver.isZero()) {
-			UnallocatedTokensParticle unallocatedLeftOver = new UnallocatedTokensParticle(
+			var unallocatedLeftOver = new UnallocatedTokensParticle(
 				leftOver,
-				TokenUnitConversions.unitsToSubunits(tokenCreation.getGranularity()),
+				unitsToSubunits(tokenCreation.getGranularity()),
 				System.currentTimeMillis(),
 				token.getRRI(),
 				token.getTokenPermissions()
@@ -122,44 +102,28 @@ public class CreateTokenToParticleGroupsMapper implements StatelessActionToParti
 			mintGroupBuilder.addParticle(unallocatedLeftOver, Spin.UP);
 		}
 
-		return Arrays.asList(
-			tokenCreationGroup,
-			mintGroupBuilder.build()
-		);
+		return List.of(tokenCreationGroup, mintGroupBuilder.build());
 	}
 
 	public List<ParticleGroup> createFixedSupplyToken(CreateTokenAction tokenCreation) {
-		UInt256 amount = TokenUnitConversions.unitsToSubunits(tokenCreation.getInitialSupply());
-		UInt256 granularity = TokenUnitConversions.unitsToSubunits(tokenCreation.getGranularity());
-		FixedSupplyTokenDefinitionParticle token = new FixedSupplyTokenDefinitionParticle(
-			tokenCreation.getRRI().getAddress(),
-			tokenCreation.getName(),
-			tokenCreation.getRRI().getName(),
-			tokenCreation.getDescription(),
-			amount,
-			granularity,
-			tokenCreation.getIconUrl(),
-			tokenCreation.getUrl()
-		);
+		var token = tokenCreation.toFixedSupplyTokenDefinitionParticle();
 
-		TransferrableTokensParticle tokens = new TransferrableTokensParticle(
-			amount,
-			granularity,
+		var tokens = new TransferrableTokensParticle(
+			unitsToSubunits(tokenCreation.getInitialSupply()),
+			unitsToSubunits(tokenCreation.getGranularity()),
 			token.getRRI().getAddress(),
 			System.currentTimeMillis(),
 			token.getRRI(),
 			ImmutableMap.of()
 		);
 
-		RRIParticle rriParticle = new RRIParticle(token.getRRI());
-		ParticleGroup tokenCreationGroup = ParticleGroup.of(
+		var rriParticle = new RRIParticle(token.getRRI());
+		var tokenCreationGroup = ParticleGroup.of(
 			SpunParticle.down(rriParticle),
 			SpunParticle.up(token),
 			SpunParticle.up(tokens)
 		);
 
-		return Arrays.asList(
-			tokenCreationGroup
-		);
+		return List.of(tokenCreationGroup);
 	}
 }
