@@ -22,7 +22,6 @@
 
 package com.radixdlt.client.application.translate.tokens;
 
-import com.google.common.collect.ImmutableMap;
 import com.radixdlt.client.application.translate.ApplicationState;
 import com.radixdlt.identifiers.RRI;
 
@@ -34,14 +33,14 @@ import java.util.Map;
  * The tokens delegated to an address at a given point in time.
  */
 public class DelegatedTokenBalanceState implements ApplicationState {
-	private final ImmutableMap<RRI, BigDecimal> balance;
+	private final Map<RRI, BigDecimal> balance;
 
 	public DelegatedTokenBalanceState() {
-		this.balance = ImmutableMap.of();
+		this.balance = Map.of();
 	}
 
 	private DelegatedTokenBalanceState(Map<RRI, BigDecimal> balance) {
-		this.balance = ImmutableMap.copyOf(balance);
+		this.balance = Map.copyOf(balance);
 	}
 
 	public Map<RRI, BigDecimal> getBalance() {
@@ -57,13 +56,13 @@ public class DelegatedTokenBalanceState implements ApplicationState {
 			return state0;
 		}
 
-		HashMap<RRI, BigDecimal> balance = new HashMap<>(state0.balance);
+		var balance = new HashMap<>(state0.balance);
 		state1.balance.forEach((rri, bal) -> balance.merge(rri, bal, BigDecimal::add));
 		return new DelegatedTokenBalanceState(balance);
 	}
 
 	public static DelegatedTokenBalanceState merge(DelegatedTokenBalanceState state, RRI tokenRri, BigDecimal amount) {
-		HashMap<RRI, BigDecimal> balance = new HashMap<>(state.balance);
+		var balance = new HashMap<>(state.balance);
 		balance.merge(tokenRri, amount, BigDecimal::add);
 		return new DelegatedTokenBalanceState(balance);
 	}
