@@ -22,29 +22,26 @@
 
 package com.radixdlt.client.application.translate.tokens;
 
-import com.google.common.collect.ImmutableMap;
-import com.radixdlt.client.application.translate.StageActionException;
+import org.bouncycastle.util.encoders.Base64;
+
 import com.radixdlt.client.application.translate.ShardedParticleStateId;
-import com.radixdlt.client.atommodel.tokens.MutableSupplyTokenDefinitionParticle.TokenTransition;
-import com.radixdlt.client.atommodel.tokens.TokenPermission;
+import com.radixdlt.client.application.translate.StageActionException;
+import com.radixdlt.client.application.translate.StatefulActionToParticleGroupsMapper;
+import com.radixdlt.client.atommodel.tokens.TransferrableTokensParticle;
+import com.radixdlt.client.core.atoms.ParticleGroup;
+import com.radixdlt.client.core.atoms.particles.Particle;
+import com.radixdlt.client.core.atoms.particles.SpunParticle;
 import com.radixdlt.client.core.fungible.FungibleTransitionMapper;
-import com.radixdlt.identifiers.RRI;
 import com.radixdlt.client.core.fungible.NotEnoughFungiblesException;
-import java.util.Collections;
+import com.radixdlt.utils.UInt256;
+
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
-
-import com.radixdlt.client.atommodel.tokens.TransferrableTokensParticle;
-import com.radixdlt.client.core.atoms.particles.Particle;
 import java.util.stream.Stream;
-import org.bouncycastle.util.encoders.Base64;
-import com.radixdlt.utils.UInt256;
 
-import com.radixdlt.client.application.translate.StatefulActionToParticleGroupsMapper;
-import com.radixdlt.client.core.atoms.ParticleGroup;
-import com.radixdlt.client.core.atoms.particles.SpunParticle;
+import static com.radixdlt.client.application.translate.tokens.TokenUnitConversions.unitsToSubunits;
 
 /**
  * Maps a send message action to the particles necessary to be included in an atom.
@@ -57,16 +54,12 @@ public class TransferTokensToParticleGroupsMapper implements StatefulActionToPar
 	private static List<SpunParticle> mapToParticles(TransferTokensAction transfer, List<TransferrableTokensParticle> currentParticles)
 		throws NotEnoughFungiblesException {
 
-		final UInt256 totalAmountToTransfer = TokenUnitConversions.unitsToSubunits(transfer.getAmount());
-		if (currentParticles.isEmpty()) {
-			throw new NotEnoughFungiblesException(totalAmountToTransfer, UInt256.ZERO);
-		}
+		final var totalAmountToTransfer = validateAmountToTransfer(transfer, currentParticles);
+		final var token = currentParticles.get(0).getTokenDefinitionReference();
+		final var granularity = currentParticles.get(0).getGranularity();
+		final var permissions = currentParticles.get(0).getTokenPermissions();
 
-		final RRI token = currentParticles.get(0).getTokenDefinitionReference();
-		final UInt256 granularity = currentParticles.get(0).getGranularity();
-		final Map<TokenTransition, TokenPermission> permissions = currentParticles.get(0).getTokenPermissions();
-
-		FungibleTransitionMapper<TransferrableTokensParticle, TransferrableTokensParticle> mapper = new FungibleTransitionMapper<>(
+		var mapper = new FungibleTransitionMapper<>(
 			TransferrableTokensParticle::getAmount,
 			amt ->
 				new TransferrableTokensParticle(
@@ -91,39 +84,42 @@ public class TransferTokensToParticleGroupsMapper implements StatefulActionToPar
 		return mapper.mapToParticles(currentParticles, totalAmountToTransfer);
 	}
 
+	private static UInt256 validateAmountToTransfer(
+		final TransferTokensAction transfer,
+		final List<TransferrableTokensParticle> currentParticles
+	) throws NotEnoughFungiblesException {
+
+		final var totalAmountToTransfer = unitsToSubunits(transfer.getAmount());
+		if (currentParticles.isEmpty()) {
+			throw new NotEnoughFungiblesException(totalAmountToTransfer, UInt256.ZERO);
+		}
+		return totalAmountToTransfer;
+	}
+
 	@Override
 	public Set<ShardedParticleStateId> requiredState(TransferTokensAction transfer) {
-		return Collections.singleton(ShardedParticleStateId.of(TransferrableTokensParticle.class, transfer.getFrom()));
+		return Set.of(ShardedParticleStateId.of(TransferrableTokensParticle.class, transfer.getFrom()));
 	}
 
 	@Override
 	public List<ParticleGroup> mapToParticleGroups(TransferTokensAction transfer, Stream<Particle> store) throws StageActionException {
-		final RRI tokenRef = transfer.getRRI();
+		final var tokenRef = transfer.getRRI();
 
-		List<TransferrableTokensParticle> tokenConsumables = store
+		var tokenConsumables = store
 			.map(TransferrableTokensParticle.class::cast)
 			.filter(p -> p.getTokenDefinitionReference().equals(tokenRef))
 			.collect(Collectors.toList());
 
-		final List<SpunParticle> transferParticles;
 		try {
-			transferParticles = mapToParticles(transfer, tokenConsumables);
+			final var transferParticles = mapToParticles(transfer, tokenConsumables);
+			final var metaData = transfer.getAttachment() == null
+								 ? Map.<String, String>of()
+								 : Map.of("attachment", Base64.toBase64String(transfer.getAttachment()));
+
+			return List.of(ParticleGroup.of(transferParticles, metaData));
 		} catch (NotEnoughFungiblesException e) {
 			throw new InsufficientFundsException(
 				tokenRef, TokenUnitConversions.subunitsToUnits(e.getCurrent()), transfer.getAmount()
-			);
-		}
-
-		if (transfer.getAttachment() == null) {
-			return Collections.singletonList(
-				ParticleGroup.of(transferParticles)
-			);
-		} else {
-			final ImmutableMap<String, String> metaData = ImmutableMap.of(
-				"attachment", Base64.toBase64String(transfer.getAttachment())
-			);
-			return Collections.singletonList(
-				ParticleGroup.of(transferParticles, metaData)
 			);
 		}
 	}
