@@ -23,29 +23,26 @@
 package com.radixdlt.client.atommodel.tokens;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.radixdlt.client.atommodel.Accountable;
 import com.radixdlt.client.atommodel.Ownable;
-import com.radixdlt.identifiers.RadixAddress;
 import com.radixdlt.client.atommodel.tokens.MutableSupplyTokenDefinitionParticle.TokenTransition;
 import com.radixdlt.client.core.atoms.particles.Particle;
 import com.radixdlt.identifiers.EUID;
 import com.radixdlt.identifiers.RRI;
-import java.util.Map;
-import java.util.stream.Collectors;
+import com.radixdlt.identifiers.RadixAddress;
 import com.radixdlt.serialization.DsonOutput;
 import com.radixdlt.serialization.DsonOutput.Output;
 import com.radixdlt.serialization.SerializerId2;
 import com.radixdlt.utils.UInt256;
 
-import java.util.Collections;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
- *  A particle which represents an amount of consumable and consuming, tranferable fungible tokens
- *  owned by some key owner and stored in an account.
+ * A particle which represents an amount of consumable and consuming, tranferable fungible tokens
+ * owned by some key owner and stored in an account.
  */
 @SerializerId2("radix.particles.transferrable_tokens")
 public final class TransferrableTokensParticle extends Particle implements Accountable, Ownable {
@@ -72,7 +69,7 @@ public final class TransferrableTokensParticle extends Particle implements Accou
 	private Map<TokenTransition, TokenPermission> tokenPermissions;
 
 	protected TransferrableTokensParticle() {
-		this.tokenPermissions = ImmutableMap.of();
+		this.tokenPermissions = Map.of();
 	}
 
 	public TransferrableTokensParticle(
@@ -94,12 +91,12 @@ public final class TransferrableTokensParticle extends Particle implements Accou
 		this.granularity = granularity;
 		this.nonce = nonce;
 		this.amount = amount;
-		this.tokenPermissions = ImmutableMap.copyOf(tokenPermissions);
+		this.tokenPermissions = Map.copyOf(tokenPermissions);
 	}
 
 	@Override
 	public Set<EUID> getDestinations() {
-		return ImmutableSet.of(this.address.euid());
+		return Set.of(address.euid());
 	}
 
 	public Map<TokenTransition, TokenPermission> getTokenPermissions() {
@@ -109,35 +106,35 @@ public final class TransferrableTokensParticle extends Particle implements Accou
 	@JsonProperty("permissions")
 	@DsonOutput(value = {Output.ALL})
 	private Map<String, String> getJsonPermissions() {
-		return this.tokenPermissions.entrySet().stream()
+		return tokenPermissions.entrySet().stream()
 			.collect(Collectors.toMap(e -> e.getKey().name().toLowerCase(), e -> e.getValue().name().toLowerCase()));
 	}
 
 	@JsonProperty("permissions")
 	private void setJsonPermissions(Map<String, String> permissions) {
-		if (permissions != null) {
-			this.tokenPermissions = permissions.entrySet().stream()
-				.collect(Collectors.toMap(
-					e -> TokenTransition.valueOf(e.getKey().toUpperCase()),
-					e -> TokenPermission.valueOf(e.getValue().toUpperCase())
-				));
-		} else {
+		if (permissions == null) {
 			throw new IllegalArgumentException("Permissions cannot be null.");
 		}
+
+		tokenPermissions = permissions.entrySet().stream()
+			.collect(Collectors.toMap(
+				e -> TokenTransition.valueOf(e.getKey().toUpperCase()),
+				e -> TokenPermission.valueOf(e.getValue().toUpperCase())
+			));
 	}
 
 	@Override
 	public Set<RadixAddress> getAddresses() {
-		return Collections.singleton(this.address);
+		return Set.of(address);
 	}
 
 	@Override
 	public RadixAddress getAddress() {
-		return this.address;
+		return address;
 	}
 
 	public long getNonce() {
-		return this.nonce;
+		return nonce;
 	}
 
 	public RRI getTokenDefinitionReference() {
@@ -145,22 +142,18 @@ public final class TransferrableTokensParticle extends Particle implements Accou
 	}
 
 	public UInt256 getAmount() {
-		return this.amount;
+		return amount;
 	}
 
 	public UInt256 getGranularity() {
-		return this.granularity;
+		return granularity;
 	}
 
 	@Override
 	public String toString() {
-		return String.format("%s[%s:%s:%s:%s:%s]",
-			getClass().getSimpleName(),
-			String.valueOf(tokenDefinitionReference),
-			String.valueOf(amount),
-			String.valueOf(granularity),
-			String.valueOf(address),
-			nonce
+		return String.format(
+			"%s[%s:%s:%s:%s:%s]",
+			getClass().getSimpleName(), tokenDefinitionReference, amount, granularity, address, nonce
 		);
 	}
 }
