@@ -22,16 +22,16 @@
 
 package com.radixdlt.client.core.atoms;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.hash.HashCode;
-import com.radixdlt.client.atommodel.rri.RRIParticle;
-import com.radixdlt.identifiers.RRI;
-import com.radixdlt.identifiers.RadixAddress;
-import com.radixdlt.client.core.atoms.particles.Particle;
-import com.radixdlt.client.core.atoms.particles.SpunParticle;
 import org.junit.Test;
 
-import java.util.Collections;
+import com.google.common.hash.HashCode;
+import com.radixdlt.client.atommodel.rri.RRIParticle;
+import com.radixdlt.client.core.atoms.particles.Particle;
+import com.radixdlt.client.core.atoms.particles.SpunParticle;
+import com.radixdlt.identifiers.RRI;
+import com.radixdlt.identifiers.RadixAddress;
+
+import java.util.Set;
 
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
 import static org.junit.Assert.assertEquals;
@@ -42,38 +42,48 @@ import static org.mockito.Mockito.when;
 public class AtomTest {
 	@Test
 	public void when_an_atom_has_multiple_destinations_to_the_same_address__calling_addresses_should_return_one_address() {
-		RadixAddress address = mock(RadixAddress.class);
-		Particle particle0 = mock(Particle.class);
-		when(particle0.getShardables()).thenReturn(Collections.singleton(address));
-		Particle particle1 = mock(Particle.class);
-		when(particle1.getShardables()).thenReturn(Collections.singleton(address));
-		Atom atom = Atom.create(ParticleGroup.of(SpunParticle.up(particle0), SpunParticle.up(particle1)));
+		var address = mock(RadixAddress.class);
+
+		var particle0 = mock(Particle.class);
+		when(particle0.getShardables()).thenReturn(Set.of(address));
+
+		var particle1 = mock(Particle.class);
+		when(particle1.getShardables()).thenReturn(Set.of(address));
+
+		var atom = Atom.create(ParticleGroup.of(SpunParticle.up(particle0), SpunParticle.up(particle1)));
+
 		assertThat(atom.addresses()).containsExactly(address);
 	}
 
 	@Test
 	public void hash_test_atom() {
-		Atom atom = Atom.create(ImmutableList.of());
-		HashCode hash = atom.getHash();
+		var atom = Atom.create();
+		var hash = atom.getHash();
+
 		assertIsNotRawDSON(hash);
-		String hashHex = hash.toString();
+
+		var hashHex = hash.toString();
+
 		assertEquals("fd208580f27bd833992afa0369d43f001ac1599743a22f7b8111f9544712f47e", hashHex);
 		assertFalse(atom.getAid().isZero());
 	}
 
 	@Test
 	public void hash_test_particle() {
-		RadixAddress address = RadixAddress.from("JEbhKQzBn4qJzWJFBbaPioA2GTeaQhuUjYWkanTE6N8VvvPpvM8");
-		RRI rri = RRI.of(address, "FOOBAR");
-		RRIParticle particle = new RRIParticle(rri);
-		HashCode hash = particle.getHash();
+		var address = RadixAddress.from("JEbhKQzBn4qJzWJFBbaPioA2GTeaQhuUjYWkanTE6N8VvvPpvM8");
+		var rri = RRI.of(address, "FOOBAR");
+		var particle = new RRIParticle(rri);
+		var hash = particle.getHash();
+
 		assertIsNotRawDSON(hash);
-		String hashHex = hash.toString();
+
+		var hashHex = hash.toString();
+
 		assertEquals("ea6096c4c181078114de3f609a97e7b97b8ff5f182e74e5168d68bc2a1ff702f", hashHex);
 	}
 
 	private void assertIsNotRawDSON(HashCode hash) {
-		String hashHex = hash.toString();
+		var hashHex = hash.toString();
 		// CBOR/DSON encoding of an object starts with "bf" and ends with "ff", so we are here making
 		// sure that Hash of the object is not just the DSON output, but rather a 256 bit hash digest of it.
 		// the probability of 'accidentally' getting getting these prefixes and suffixes anyway is minimal (1/2^16)
