@@ -19,27 +19,28 @@ package com.radixdlt.fees;
 
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import com.radixdlt.client.atommodel.unique.UniqueParticle;
 import com.radixdlt.client.core.atoms.Atom;
 import com.radixdlt.client.core.atoms.ParticleGroup;
-import com.radixdlt.client.core.atoms.particles.Particle;
 import com.radixdlt.client.core.atoms.particles.Spin;
 import com.radixdlt.client.core.atoms.particles.SpunParticle;
 import com.radixdlt.crypto.ECKeyPair;
 import com.radixdlt.identifiers.RadixAddress;
 import com.radixdlt.utils.UInt256;
 
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
+
+import nl.jqno.equalsverifier.EqualsVerifier;
+
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.Assert.assertEquals;
 
-import nl.jqno.equalsverifier.EqualsVerifier;
-
 public class FeeTableTest {
     private static final UInt256 MINIMUM_FEE = UInt256.FIVE;
-	private static final ImmutableList<FeeEntry> FEE_ENTRIES = ImmutableList.of(
+	private static final List<FeeEntry> FEE_ENTRIES = List.of(
 		PerParticleFeeEntry.of(UniqueParticle.class, 0, UInt256.THREE)
 	);
 
@@ -51,43 +52,49 @@ public class FeeTableTest {
 
     @Test
     public void testGetters() {
-    	FeeTable ft = get();
+		var ft = get();
+
     	assertEquals(MINIMUM_FEE, ft.minimumFee());
     	assertEquals(FEE_ENTRIES, ft.feeEntries());
     }
 
     @Test
     public void testFeeForAtomNotMinimum() {
-    	FeeTable ft = get();
-    	final var p1 = makeParticle("test message 1");
+		var ft = get();
+
+		final var p1 = makeParticle("test message 1");
     	final var p2 = makeParticle("test message 2");
-    	ImmutableList<ParticleGroup> particleGroups = ImmutableList.of(
-    		ParticleGroup.of(SpunParticle.up(p1)),
-    		ParticleGroup.of(SpunParticle.up(p2))
-    	);
-    	Atom a = Atom.create(particleGroups);
-    	UInt256 fee = ft.feeFor(a, a.particles(Spin.UP).collect(ImmutableSet.toImmutableSet()), 0);
+
+		var particleGroups = List.of(ParticleGroup.of(SpunParticle.up(p1)), ParticleGroup.of(SpunParticle.up(p2)));
+
+    	var a = Atom.create(particleGroups);
+		var fee = ft.feeFor(a, a.particles(Spin.UP).collect(Collectors.toSet()), 0);
+
     	assertEquals(UInt256.SIX, fee);
     }
 
     @Test
     public void testFeeForAtomMinimum() {
-    	FeeTable ft = get();
-    	Atom a = Atom.create(ImmutableList.of());
-    	UInt256 fee = ft.feeFor(a, ImmutableSet.of(), 0);
+		var ft = get();
+		var a = Atom.create();
+
+		var fee = ft.feeFor(a, Set.of(), 0);
+
     	assertEquals(UInt256.FIVE, fee);
     }
 
     @Test
     public void testFeeOverflow() {
-    	ImmutableList<FeeEntry> feeEntries = ImmutableList.of(
+		var feeEntries = List.of(
 			PerParticleFeeEntry.of(UniqueParticle.class, 0, UInt256.MAX_VALUE),
 			PerBytesFeeEntry.of(1, 0, UInt256.MAX_VALUE)
 		);
-    	FeeTable ft = FeeTable.from(MINIMUM_FEE, feeEntries);
+
+    	var ft = FeeTable.from(MINIMUM_FEE, feeEntries);
     	final var p3 = makeParticle("test message 3");
-    	Atom a = Atom.create(ParticleGroup.of(SpunParticle.up(p3)));
-    	ImmutableSet<Particle> outputs = a.particles(Spin.UP).collect(ImmutableSet.toImmutableSet());
+		var a = Atom.create(ParticleGroup.of(SpunParticle.up(p3)));
+		var outputs = a.particles(Spin.UP).collect(Collectors.toSet());
+
     	assertThatThrownBy(() -> ft.feeFor(a, outputs, 1))
     		.isInstanceOf(ArithmeticException.class)
     		.hasMessageStartingWith("Fee overflow");
@@ -105,8 +112,7 @@ public class FeeTableTest {
     }
 
     private static UniqueParticle makeParticle(String message) {
-    	final var kp = ECKeyPair.generateNew();
-    	final var address = new RadixAddress((byte) 0, kp.getPublicKey());
-    	return new UniqueParticle(address, message);
+		final var address = new RadixAddress((byte) 0, ECKeyPair.generateNew().getPublicKey());
+    	return UniqueParticle.create(address, message);
     }
 }
